--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300&display=swap");
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+body {
+  background-color: #222323;
+  /* min-height:100%; */
+}
+.main {
+  @apply dark:bg-background flex justify-center  h-full w-screen p-2;
+}
+.profileimg {
+  @apply overflow-visible flex justify-center flex-wrap lg:flex  lg:justify-center  md:border-r-4 mr-4 mb-3 border-opacity-60;
+}
+.nametext {
+  @apply text-7xl  font-extrabold   self-center ml-4 md:ml-6;
+}
+.aboutparagraph {
+  @apply text-2xl font-light  m-2;
+}
+.whitedark {
+  @apply dark:text-white;
+}
+.headings {
+  @apply text-primary font-bold text-3xl;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.maintext {
+  @apply font-mono text-blue-900 text-8xl;
 }
